update10Sep (add new graph and fix bug)

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ forest_monitoring/models/.DS_Store
 forest_monitoring/models/.DS_Store
 /forest_monitoring/models/backup2
 forest_monitoring/models/.DS_Store
+/forest_monitoring/models/backup3
