--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ forest_monitoring/models/.DS_Store
 /forest_monitoring/models/backup2
 forest_monitoring/models/.DS_Store
 /forest_monitoring/models/backup3
+forest_monitoring/save_log.log
