1Oct2025 fix GAMA-Unity message

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@ forest_monitoring/models/.DS_Store
 forest_monitoring/models/.DS_Store
 /forest_monitoring/models/backup3
 forest_monitoring/save_log.log
+forest_monitoring/checkreadID.log
+forest_monitoring/models/New Model.gaml
+forest_monitoring/Untitled.log
+/forest_monitoring/models/includes/export
+/forest_monitoring/models/backup4
+/forest_monitoring/models/backup_now
+forest_monitoring/QuestionaireAfter_problem.log
