--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ forest_monitoring/Untitled.log
 /forest_monitoring/models/backup4
 /forest_monitoring/models/backup_now
 forest_monitoring/QuestionaireAfter_problem.log
+forest_monitoring/8Oct_noproblem.log
