--- a/forest_monitoring/settings.json
+++ b/forest_monitoring/settings.json
@@ -1,10 +1,10 @@
 {
 "type": "json_settings",
-"name": "forestmonitoringonemap_model_VR",
-"splashscreen": "./models/snapshots/snapshot.png",
+"name": "Forest monitoring",
+"splashscreen": "./splashscreen/forest_trail.jpeg",
 "model_file_path": "./models/forest_monitoring_one_map-VR.gaml",
 "experiment_name": "vr_xp",
-"minimal_players": "7",
-"maximal_players": "7",
+"minimal_players": "0",
+"maximal_players": "6",
 "selected_monitoring": "gama_screen"
 }
