Export questionnaire data to CSV

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,6 @@ forest_monitoring/Untitled.log
 /forest_monitoring/models/includes/export
 /forest_monitoring/models/backup4
 /forest_monitoring/models/backup_now
-forest_monitoring/QuestionaireAfter_problem.log
 forest_monitoring/8Oct_noproblem.log
+/forest_monitoring/results
+forest_monitoring/QuestionnaireAfter_problem.log
