Coding camp3 update

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ forest_monitoring/Untitled.log
 forest_monitoring/8Oct_noproblem.log
 /forest_monitoring/results
 forest_monitoring/QuestionnaireAfter_problem.log
+test/.project
+/test
+/forest_monitoring/models/backup5
