Coding camp final update 3Nov2025

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ forest_monitoring/QuestionnaireAfter_problem.log
 test/.project
 /test
 /forest_monitoring/models/backup5
+gama_ws_python/all_check.zip
+gama_ws_python/gama_actions.csv
+gama_ws_python/coins.json
