--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ test/.project
 gama_ws_python/all_check.zip
 gama_ws_python/gama_actions.csv
 gama_ws_python/coins.json
+gama_ws_python/scores.json
