--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ gama_ws_python/all_check.zip
 gama_ws_python/gama_actions.csv
 gama_ws_python/coins.json
 gama_ws_python/scores.json
+gama_ws_python/all_check2.zip
