Final update 600 tree -> 100 tree (20Nov2025)

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ gama_ws_python/gama_actions.csv
 gama_ws_python/coins.json
 gama_ws_python/scores.json
 gama_ws_python/all_check2.zip
+/forest_monitoring/models/backup20Nove_before_big_change
