update Backend and Frontend and GAMA message 21Nov2025

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,9 @@ gama_ws_python/coins.json
 gama_ws_python/scores.json
 gama_ws_python/all_check2.zip
 /forest_monitoring/models/backup20Nove_before_big_change
+gama_ws_python/__pycache__/app.cpython-314.pyc
+gama_ws_python/initial_coins.json
+gama_ws_python/stack_trees.json
+/gama_ws_python/static/old
+gama_ws_python/team_scores.json
+gama_ws_python/tree_growth.json
