update resend questionnaire from unity to GAMA

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ gama_ws_python/stack_trees.json
 /gama_ws_python/static/old
 gama_ws_python/team_scores.json
 gama_ws_python/tree_growth.json
+gama_ws_python.zip
