remove ReadyCheck after start game

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ gama_ws_python/stack_trees.json
 gama_ws_python/team_scores.json
 gama_ws_python/tree_growth.json
 gama_ws_python.zip
+/forest_monitoring/models/backup26Nov_after_implement
