--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@ gama_ws_python/team_scores.json
 gama_ws_python/tree_growth.json
 gama_ws_python.zip
 /forest_monitoring/models/backup26Nov_after_implement
+forest_monitoring/models/forest_monitoring_one_map-VR_for_doc.gaml
+forest_monitoring/models/forest_monitoring_one_map_for_doc.gaml
